--- a/app/package.json
+++ b/app/package.json
@@ -20,29 +20,29 @@
 		"test:unit:watch": "vitest -c ./@test/vitest/vitest.config.js"
 	},
 	"dependencies": {
-		"pinia": "^2.1.3",
-		"vue": "^3.3.4",
-		"vue-i18n": "^9.2.2"
+		"pinia": "2.1.3",
+		"vue": "3.3.4",
+		"vue-i18n": "9.2.2"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
-		"@intlify/unplugin-vue-i18n": "^0.11.0",
-		"@pinia/testing": "^0.1.2",
+		"@intlify/unplugin-vue-i18n": "0.11.0",
+		"@pinia/testing": "0.1.2",
 		"@vitejs/plugin-vue": "5.0.4",
-		"@vue/test-utils": "^2.3.2",
+		"@vue/test-utils": "2.3.2",
 		"@windows98/configs": "workspace:*",
 		"@windows98/design-system": "workspace:*",
 		"@windows98/i18n": "workspace:*",
 		"@windows98/micro-apps": "workspace:*",
 		"@windows98/micro-services": "workspace:*",
 		"cypress": "13.6.6",
-		"jsdom": "^22.1.0",
+		"jsdom": "22.1.0",
 		"lint-staged": "15.2.2",
-		"sass": "^1.62.1",
+		"sass": "1.62.1",
 		"stylelint": "16.2.1",
-		"typescript": "^5.0.4",
+		"typescript": "5.4.2",
 		"vite": "5.2.8",
-		"vite-tsconfig-paths": "^4.2.0",
+		"vite-tsconfig-paths": "4.2.0",
 		"vitest": "1.3.1",
 		"vue-tsc": "2.0.6"
 	},
