--- a/core/design-system/package.json
+++ b/core/design-system/package.json
@@ -48,19 +48,19 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
 		"@playwright/experimental-ct-react": "1.45.1",
-		"@types/node": "^20.9.0",
-		"@types/react": "^18.2.43",
-		"@types/react-dom": "^18.2.17",
-		"@vitejs/plugin-react": "^4.2.1",
+		"@types/node": "20.9.0",
+		"@types/react": "18.2.43",
+		"@types/react-dom": "18.2.17",
+		"@vitejs/plugin-react": "4.2.1",
 		"@windows98/configs": "workspace:*",
 		"@windows98/toolkit": "workspace:*",
 		"lint-staged": "15.2.2",
-		"sass": "^1.70.0",
+		"sass": "1.70.0",
 		"stylelint": "16.2.1",
-		"typescript": "^5.2.2",
+		"typescript": "5.4.2",
 		"vite": "5.2.8",
-		"vite-plugin-css-injected-by-js": "^3.3.1",
-		"vite-plugin-dts": "^3.7.0",
+		"vite-plugin-css-injected-by-js": "3.3.1",
+		"vite-plugin-dts": "3.7.0",
 		"vitest": "1.3.1"
 	}
 }
