--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,8 @@
 	"description": "Application for Windows 98",
 	"author": "Arkadiusz Paściak",
 	"engines": {
-		"node": "20.12.0"
+		"node": "20.12.0",
+		"pnpm": "9.0.6"
 	},
 	"scripts": {
 		"app:build": "vite build --config ./configs/vite.config.mts",
