--- a/core/configs/package.json
+++ b/core/configs/package.json
@@ -2,7 +2,8 @@
 	"author": "Arkadiusz Paściak",
 	"description": "Tests",
 	"engines": {
-		"node": "20.12.0"
+		"node": "20.12.0",
+		"pnpm": "9.0.6"
 	},
 	"exports": {
 		"./biome/shared": "./src/biome/shared.config.json",
