--- a/core/design-system/package.json
+++ b/core/design-system/package.json
@@ -5,7 +5,8 @@
 	"version": "1.0.0",
 	"type": "module",
 	"engines": {
-		"node": "20.12.0"
+		"node": "20.12.0",
+		"pnpm": "9.0.6"
 	},
 	"main": "@bundler/build/index.umd.cjs",
 	"module": "@bundler/build/index.js",
@@ -22,7 +23,6 @@
 		"./variables.config.css": "./@bundler/build/styles/variables.config.css"
 	},
 	"license": "MIT",
-	"packageManager": "pnpm@9.0.6",
 	"scripts": {
 		"dev": "vite @bundler",
 		"build": "pnpm run build:components && pnpm run build:styles",
