--- a/core/toolkit/package.json
+++ b/core/toolkit/package.json
@@ -4,7 +4,8 @@
 	"description": "Curated set of tools and utilities for efficient software development",
 	"author": "Arkadiusz Paściak",
 	"engines": {
-		"node": "20.12.0"
+		"node": "20.12.0",
+		"pnpm": "9.0.6"
 	},
 	"exports": {
 		".": "./src/index.ts"
