--- a/micro-apps/package.json
+++ b/micro-apps/package.json
@@ -42,7 +42,8 @@
 		"vitest": "1.3.1"
 	},
 	"engines": {
-		"node": "20.12.0"
+		"node": "20.12.0",
+		"pnpm": "9.0.6"
 	},
 	"name": "@windows98/micro-apps",
 	"scripts": {
