--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 	},
 	"homepage": "https://github.com/arkadiuszPasciak/windows98#readme",
 	"engines": {
-		"node": "20.12.0"
+		"node": "20.12.0",
+		"pnpm": "9.0.6"
 	},
 	"scripts": {
 		"prepare": "husky install"
