--- a/core/ci-cd/package.json
+++ b/core/ci-cd/package.json
@@ -1,62 +1,62 @@
 {
-  "name": "@windows98/ci-cd",
-  "version": "1.0.0",
-  "description": "CI/CD configuration for Windows 98",
-  "author": "Arkadiusz Paściak",
-  "engines": {
-    "node": "20.12.0"
-  },
-  "type": "module",
-  "scripts": {
-    "lint:code:fix:all": "pnpm run lint:code:fix:app && pnpm run lint:code:fix:design-system && pnpm run lint:code:fix:docs && pnpm run lint:code:fix:i18n && pnpm run lint:code:fix:micro-apps && pnpm run lint:code:fix:micro-services && pnpm run lint:code:fix:toolkit",
-    "lint:code:fix:app": "pnpm --filter @windows98/app run lint:code:fix",
-    "lint:code:fix:configs": "pnpm --filter @windows98/configs run lint:code:fix",
-    "lint:code:fix:design-system": "pnpm --filter @windows98/design-system run lint:code:fix",
-    "lint:code:fix:docs": "pnpm --filter @windows98/docs run lint:code:fix",
-    "lint:code:fix:i18n": "pnpm --filter @windows98/i18n run lint:code:fix",
-    "lint:code:fix:micro-apps": "pnpm --filter @windows98/micro-apps run lint:code:fix",
-    "lint:code:fix:micro-services": "pnpm --filter @windows98/micro-services run lint:code:fix",
-    "lint:code:fix:toolkit": "pnpm --filter @windows98/toolkit run lint:code:fix",
-    "lint:code:run:all": "pnpm run lint:code:run:app && pnpm run lint:code:run:design-system && pnpm run lint:code:run:docs && pnpm run lint:code:run:i18n && pnpm run lint:code:run:micro-apps && pnpm run lint:code:run:micro-services && pnpm run lint:code:run:toolkit",
-    "lint:code:run:app": "pnpm --filter @windows98/app run lint:code:run",
-    "lint:code:run:configs": "pnpm --filter @windows98/configs run lint:code:run",
-    "lint:code:run:design-system": "pnpm --filter @windows98/design-system run lint:code:run",
-    "lint:code:run:docs": "pnpm --filter @windows98/docs run lint:code:run",
-    "lint:code:run:i18n": "pnpm --filter @windows98/i18n run lint:code:run",
-    "lint:code:run:linters": "pnpm --filter @windows98/linters run lint:code:run",
-    "lint:code:run:micro-apps": "pnpm --filter @windows98/micro-apps run lint:code:run",
-    "lint:code:run:micro-services": "pnpm --filter @windows98/micro-services run lint:code:run",
-    "lint:code:run:toolkit": "pnpm --filter @windows98/toolkit run lint:code:run",
-    "lint:staged:fix:all": "pnpm run lint:staged:fix:app && pnpm run lint:staged:fix:design-system && pnpm run lint:staged:fix:docs && pnpm run lint:staged:fix:i18n && pnpm run lint:staged:fix:micro-apps && pnpm run lint:staged:fix:micro-services && pnpm run lint:staged:fix:toolkit",
-    "lint:staged:fix:app": "pnpm --filter @windows98/app run lint:staged:fix",
-    "lint:staged:fix:configs": "pnpm --filter @windows98/configs run lint:staged:fix",
-    "lint:staged:fix:design-system": "pnpm --filter @windows98/design-system run lint:staged:fix",
-    "lint:staged:fix:docs": "pnpm --filter @windows98/docs run lint:staged:fix",
-    "lint:staged:fix:i18n": "pnpm --filter @windows98/i18n run lint:staged:fix",
-    "lint:staged:fix:micro-apps": "pnpm --filter @windows98/micro-apps run lint:staged:fix",
-    "lint:staged:fix:micro-services": "pnpm --filter @windows98/micro-services run lint:staged:fix",
-    "lint:staged:fix:toolkit": "pnpm --filter @windows98/toolkit run lint:staged:fix",
-    "lint:styles:fix:all": "pnpm run lint:styles:fix:app && pnpm run lint:styles:fix:design-system && pnpm run lint:styles:fix:micro-apps",
-    "lint:styles:fix:app": "pnpm --filter @windows98/app run lint:styles:fix",
-    "lint:styles:fix:design-system": "pnpm --filter @windows98/design-system run lint:styles:fix",
-    "lint:styles:fix:micro-apps": "pnpm --filter @windows98/micro-apps run lint:styles:fix",
-    "lint:styles:run:all": "pnpm run lint:styles:run:app && pnpm run lint:styles:run:design-system && pnpm run lint:styles:run:micro-apps",
-    "lint:styles:run:app": "pnpm --filter @windows98/app run lint:styles:run",
-    "lint:styles:run:design-system": "pnpm --filter @windows98/design-system run lint:styles:run",
-    "lint:styles:run:micro-apps": "pnpm --filter @windows98/micro-apps run lint:styles:run",
-    "lint:types:run:all": "pnpm run lint:types:run:app && pnpm run lint:types:run:design-system && pnpm run lint:types:run:docs && pnpm run lint:types:run:i18n && pnpm run lint:types:run:micro-apps && pnpm run lint:types:run:micro-services && pnpm run lint:types:run:toolkit",
-    "lint:types:run:app": "pnpm --filter @windows98/app run lint:types:run",
-    "lint:types:run:design-system": "pnpm --filter @windows98/design-system run lint:types:run",
-    "lint:types:run:docs": "pnpm --filter @windows98/docs run lint:types:run",
-    "lint:types:run:i18n": "pnpm --filter @windows98/i18n run lint:types:run",
-    "lint:types:run:micro-apps": "pnpm --filter @windows98/micro-apps run lint:types:run",
-    "lint:types:run:micro-services": "pnpm --filter @windows98/micro-services run lint:types:run",
-    "lint:types:run:toolkit": "pnpm --filter @windows98/toolkit run lint:types:run",
-    "test:unit:run:all": "pnpm run test:unit:run:app && pnpm run test:unit:run:design-system && pnpm run test:unit:run:micro-apps && pnpm run test:unit:run:micro-services && pnpm run test:unit:run:toolkit",
-    "test:unit:run:app": "pnpm --filter @windows98/app run test:unit:run",
-    "test:unit:run:design-system": "pnpm --filter @windows98/design-system run test:unit:run",
-    "test:unit:run:micro-apps": "pnpm --filter @windows98/micro-apps run test:unit:run",
-    "test:unit:run:micro-services": "pnpm --filter @windows98/micro-services run test:unit:run",
-    "test:unit:run:toolkit": "pnpm --filter @windows98/toolkit run test:unit:run"
-  }
+	"name": "@windows98/ci-cd",
+	"version": "1.0.0",
+	"description": "CI/CD configuration for Windows 98",
+	"author": "Arkadiusz Paściak",
+	"engines": {
+		"node": "20.12.0",
+		"pnpm": "9.0.6"
+	},
+	"type": "module",
+	"scripts": {
+		"lint:code:fix:all": "pnpm run lint:code:fix:app && pnpm run lint:code:fix:design-system && pnpm run lint:code:fix:docs && pnpm run lint:code:fix:i18n && pnpm run lint:code:fix:micro-apps && pnpm run lint:code:fix:micro-services && pnpm run lint:code:fix:toolkit",
+		"lint:code:fix:app": "pnpm --filter @windows98/app run lint:code:fix",
+		"lint:code:fix:configs": "pnpm --filter @windows98/configs run lint:code:fix",
+		"lint:code:fix:design-system": "pnpm --filter @windows98/design-system run lint:code:fix",
+		"lint:code:fix:docs": "pnpm --filter @windows98/docs run lint:code:fix",
+		"lint:code:fix:i18n": "pnpm --filter @windows98/i18n run lint:code:fix",
+		"lint:code:fix:micro-apps": "pnpm --filter @windows98/micro-apps run lint:code:fix",
+		"lint:code:fix:micro-services": "pnpm --filter @windows98/micro-services run lint:code:fix",
+		"lint:code:fix:toolkit": "pnpm --filter @windows98/toolkit run lint:code:fix",
+		"lint:code:run:all": "pnpm run lint:code:run:app && pnpm run lint:code:run:design-system && pnpm run lint:code:run:docs && pnpm run lint:code:run:i18n && pnpm run lint:code:run:micro-apps && pnpm run lint:code:run:micro-services && pnpm run lint:code:run:toolkit",
+		"lint:code:run:app": "pnpm --filter @windows98/app run lint:code:run",
+		"lint:code:run:configs": "pnpm --filter @windows98/configs run lint:code:run",
+		"lint:code:run:design-system": "pnpm --filter @windows98/design-system run lint:code:run",
+		"lint:code:run:docs": "pnpm --filter @windows98/docs run lint:code:run",
+		"lint:code:run:i18n": "pnpm --filter @windows98/i18n run lint:code:run",
+		"lint:code:run:micro-apps": "pnpm --filter @windows98/micro-apps run lint:code:run",
+		"lint:code:run:micro-services": "pnpm --filter @windows98/micro-services run lint:code:run",
+		"lint:code:run:toolkit": "pnpm --filter @windows98/toolkit run lint:code:run",
+		"lint:staged:fix:all": "pnpm run lint:staged:fix:app && pnpm run lint:staged:fix:design-system && pnpm run lint:staged:fix:docs && pnpm run lint:staged:fix:i18n && pnpm run lint:staged:fix:micro-apps && pnpm run lint:staged:fix:micro-services && pnpm run lint:staged:fix:toolkit",
+		"lint:staged:fix:app": "pnpm --filter @windows98/app run lint:staged:fix",
+		"lint:staged:fix:configs": "pnpm --filter @windows98/configs run lint:staged:fix",
+		"lint:staged:fix:design-system": "pnpm --filter @windows98/design-system run lint:staged:fix",
+		"lint:staged:fix:docs": "pnpm --filter @windows98/docs run lint:staged:fix",
+		"lint:staged:fix:i18n": "pnpm --filter @windows98/i18n run lint:staged:fix",
+		"lint:staged:fix:micro-apps": "pnpm --filter @windows98/micro-apps run lint:staged:fix",
+		"lint:staged:fix:micro-services": "pnpm --filter @windows98/micro-services run lint:staged:fix",
+		"lint:staged:fix:toolkit": "pnpm --filter @windows98/toolkit run lint:staged:fix",
+		"lint:styles:fix:all": "pnpm run lint:styles:fix:app && pnpm run lint:styles:fix:design-system && pnpm run lint:styles:fix:micro-apps",
+		"lint:styles:fix:app": "pnpm --filter @windows98/app run lint:styles:fix",
+		"lint:styles:fix:design-system": "pnpm --filter @windows98/design-system run lint:styles:fix",
+		"lint:styles:fix:micro-apps": "pnpm --filter @windows98/micro-apps run lint:styles:fix",
+		"lint:styles:run:all": "pnpm run lint:styles:run:app && pnpm run lint:styles:run:design-system && pnpm run lint:styles:run:micro-apps",
+		"lint:styles:run:app": "pnpm --filter @windows98/app run lint:styles:run",
+		"lint:styles:run:design-system": "pnpm --filter @windows98/design-system run lint:styles:run",
+		"lint:styles:run:micro-apps": "pnpm --filter @windows98/micro-apps run lint:styles:run",
+		"lint:types:run:all": "pnpm run lint:types:run:app && pnpm run lint:types:run:design-system && pnpm run lint:types:run:docs && pnpm run lint:types:run:i18n && pnpm run lint:types:run:micro-apps && pnpm run lint:types:run:micro-services && pnpm run lint:types:run:toolkit",
+		"lint:types:run:app": "pnpm --filter @windows98/app run lint:types:run",
+		"lint:types:run:design-system": "pnpm --filter @windows98/design-system run lint:types:run",
+		"lint:types:run:docs": "pnpm --filter @windows98/docs run lint:types:run",
+		"lint:types:run:i18n": "pnpm --filter @windows98/i18n run lint:types:run",
+		"lint:types:run:micro-apps": "pnpm --filter @windows98/micro-apps run lint:types:run",
+		"lint:types:run:micro-services": "pnpm --filter @windows98/micro-services run lint:types:run",
+		"lint:types:run:toolkit": "pnpm --filter @windows98/toolkit run lint:types:run",
+		"test:unit:run:all": "pnpm run test:unit:run:app && pnpm run test:unit:run:design-system && pnpm run test:unit:run:micro-apps && pnpm run test:unit:run:micro-services && pnpm run test:unit:run:toolkit",
+		"test:unit:run:app": "pnpm --filter @windows98/app run test:unit:run",
+		"test:unit:run:design-system": "pnpm --filter @windows98/design-system run test:unit:run",
+		"test:unit:run:micro-apps": "pnpm --filter @windows98/micro-apps run test:unit:run",
+		"test:unit:run:micro-services": "pnpm --filter @windows98/micro-services run test:unit:run",
+		"test:unit:run:toolkit": "pnpm --filter @windows98/toolkit run test:unit:run"
+	}
 }
