--- a/core/design-system/package.json
+++ b/core/design-system/package.json
@@ -5,7 +5,8 @@
 	"version": "1.0.0",
 	"type": "module",
 	"engines": {
-		"node": "20.12.0"
+		"node": "20.12.0",
+		"pnpm": "9.0.6"
 	},
 	"main": "@bundler/build/index.umd.cjs",
 	"module": "@bundler/build/index.js",
@@ -22,7 +23,6 @@
 		"./variables.config.css": "./@bundler/build/styles/variables.config.css"
 	},
 	"license": "MIT",
-	"packageManager": "pnpm@9.0.6",
 	"scripts": {
 		"dev": "vite @bundler",
 		"build": "pnpm run build:components && pnpm run build:styles",
@@ -42,27 +42,25 @@
 		"test:ui:watch": "playwright test -c ./@test/playwright/playwright-ct.config.mjs --ui"
 	},
 	"peerDependencies": {
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
 		"@playwright/experimental-ct-react": "1.45.1",
-		"@types/node": "^20.9.0",
-		"@types/react": "^18.2.43",
-		"@types/react-dom": "^18.2.17",
-		"@vitejs/plugin-react": "^4.2.1",
+		"@types/node": "20.9.0",
+		"@types/react": "18.2.43",
+		"@types/react-dom": "18.2.17",
+		"@vitejs/plugin-react": "4.2.1",
 		"@windows98/configs": "workspace:*",
-		"@windows98/linters": "workspace:*",
-		"@windows98/stylelint-config": "workspace:*",
 		"@windows98/toolkit": "workspace:*",
 		"lint-staged": "15.2.2",
-		"sass": "^1.70.0",
+		"sass": "1.70.0",
 		"stylelint": "16.2.1",
-		"typescript": "^5.2.2",
+		"typescript": "5.4.2",
 		"vite": "5.2.8",
-		"vite-plugin-css-injected-by-js": "^3.3.1",
-		"vite-plugin-dts": "^3.7.0",
+		"vite-plugin-css-injected-by-js": "3.3.1",
+		"vite-plugin-dts": "3.7.0",
 		"vitest": "1.3.1"
 	}
 }
