--- a/core/configs/src/typescript/react.config.json
+++ b/core/configs/src/typescript/react.config.json
@@ -2,9 +2,6 @@
 	"extends": "./base.config.json",
 	"compilerOptions": {
 		"jsx": "react-jsx",
-		"types": [
-			"@types/react",
-			"@types/react-dom"
-		]
+		"types": ["@types/react", "@types/react-dom"]
 	}
 }
