--- a/core/configs/src/typescript/vue.config.json
+++ b/core/configs/src/typescript/vue.config.json
@@ -2,9 +2,6 @@
 	"extends": "./base.config.json",
 	"compilerOptions": {
 		"jsx": "preserve",
-		"types": [
-			"vue",
-			"vue-i18n"
-		]
+		"types": ["vue", "vue-i18n"]
 	}
 }
