fix(app): styline command

--- a/app/package.json
+++ b/app/package.json
@@ -14,8 +14,8 @@
 		"lint:code:fix": "biome check --config-path ./@linter/biome.config.json --fix",
 		"lint:code:run": "biome check --config-path ./@linter/biome.config.json",
 		"lint:staged:fix": "lint-staged --config ./@linter/lint-staged.config.cjs",
-		"lint:styles:fix": "stylelint --config ./@linter/stylelint.config.cjs \"src/Bundles/**/*.scss\" --fix",
-		"lint:styles:run": "stylelint --config ./@linter/stylelint.config.cjs \"src/Bundles/**/*.scss\"",
+		"lint:styles:fix": "stylelint --config ./@linter/stylelint.config.cjs \"src/bundles/**/*.scss\" --fix",
+		"lint:styles:run": "stylelint --config ./@linter/stylelint.config.cjs \"src/bundles/**/*.scss\"",
 		"lint:types:run": "vue-tsc --noEmit",
 		"test:unit:run": "vitest run -c ./@test/vitest/vitest.config.js",
 		"test:unit:watch": "vitest -c ./@test/vitest/vitest.config.js"
