--- a/micro-apps/package.json
+++ b/micro-apps/package.json
@@ -11,6 +11,7 @@
 		}
 	},
 	"peerDependencies": {
+		"@windows98/micro-services": "workspace:*",
 		"i18next": "23.8.2",
 		"mobx": "6.12.0",
 		"mobx-react-lite": "4.0.4",
