--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	"homepage": "https://github.com/arkadiuszPasciak/windows98#readme",
 	"engines": {
 		"node": "20.18.1",
-		"pnpm": "9.0.6"
+		"pnpm": "9.15.0"
 	},
 	"scripts": {
 		"prepare": "husky install"
@@ -18,5 +18,6 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
 		"husky": "8.0.3"
-	}
+	},
+	"packageManager": "pnpm@9.15.0"
 }
