--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
 	},
 	"homepage": "https://github.com/arkadiuszPasciak/windows98#readme",
 	"engines": {
-		"node": "20.12.0",
-		"pnpm": "9.0.6"
+		"node": "20.18.1",
+		"pnpm": "9.15.0"
 	},
 	"scripts": {
 		"prepare": "husky install"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.8.3",
+		"@biomejs/biome": "1.9.4",
 		"husky": "8.0.3"
-	}
+	},
+	"packageManager": "pnpm@9.15.0"
 }
