--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3.5.0
 
       - name: Install PNPM
-        run: npm install -g pnpm
+        run: npm install -g pnpm@9.15.0
 
       - name: Install Dependencies
         run: pnpm install
