--- a/docs/package.json
+++ b/docs/package.json
@@ -17,7 +17,7 @@
 		"@types/react-dom": "18.2.17",
 		"@windows98/configs": "workspace:*",
 		"@windows98/design-system": "workspace:*",
-		"@windows98/micro-apps": "workspace:*",
+		"@windows98/micro-frontends": "workspace:*",
 		"lint-staged": "15.2.11",
 		"storybook": "8.4.7",
 		"typescript": "5.4.2"
