--- a/micro-frontends/package.json
+++ b/micro-frontends/package.json
@@ -2,7 +2,7 @@
 	"author": "Arkadiusz Paściak",
 	"main": "@bundler/build/index.umd.cjs",
 	"module": "@bundler/build/index.js",
-	"types": "@bundler/build/@bundles/src/wc/index.wc.d.ts",
+	"types": "@bundler/build/index.d.ts",
 	"files": ["@bundler/build"],
 	"exports": {
 		".": {
@@ -18,9 +18,6 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-i18next": "14.0.5"
-	},
-	"dependencies": {
-		"@r2wc/react-to-web-component": "2.0.3"
 	},
 	"devDependencies": {
 		"@playwright/experimental-ct-react": "1.49.1",
@@ -38,8 +35,6 @@
 		"stylelint": "16.2.1",
 		"typescript": "5.4.2",
 		"vite": "5.4.19",
-		"vite-plugin-css-injected-by-js": "3.5.2",
-		"vite-plugin-dts": "4.5.3",
 		"vitest": "3.1.2"
 	},
 	"engines": {
