fix(ds): lint css instead scss files

--- a/core/design-system/package.json
+++ b/core/design-system/package.json
@@ -34,8 +34,8 @@
 		"lint:code:fix": "biome check --config-path ./@linter/biome.config.json --fix",
 		"lint:code:run": "biome check --config-path ./@linter/biome.config.json",
 		"lint:staged:fix": "lint-staged --config ./@linter/lint-staged.config.cjs",
-		"lint:styles:fix": "stylelint --config ./@linter/stylelint.config.cjs \"src/**/*.scss\" --fix",
-		"lint:styles:run": "stylelint --config ./@linter/stylelint.config.cjs \"src/**/*.scss\"",
+		"lint:styles:fix": "stylelint --config ./@linter/stylelint.config.cjs \"src/**/*.css\" --fix",
+		"lint:styles:run": "stylelint --config ./@linter/stylelint.config.cjs \"src/**/*.css\"",
 		"lint:types:run": "tsc",
 		"preview": "vite preview @bundler",
 		"test:unit:run": "vitest run -c ./@test/vitest/vitest.config.js",
