refactor(mf): remove scss

--- a/micro-frontends/package.json
+++ b/micro-frontends/package.json
@@ -30,7 +30,6 @@
 		"@windows98/toolkit": "workspace:*",
 		"@biomejs/biome": "1.9.4",
 		"lint-staged": "15.2.11",
-		"sass": "1.83.0",
 		"stylelint": "16.2.1",
 		"typescript": "5.4.2",
 		"vite": "5.4.19",
@@ -50,8 +49,8 @@
 		"lint:code:fix": "biome check --config-path ./@linter/biome.config.json --fix",
 		"lint:code:run": "biome check --config-path ./@linter/biome.config.json",
 		"lint:staged:fix": "lint-staged --config ./@linter/lint-staged.config.cjs",
-		"lint:styles:fix": "stylelint --config ./@linter/stylelint.config.cjs \"src/**/*.scss\" --fix",
-		"lint:styles:run": "stylelint --config ./@linter/stylelint.config.cjs \"src/**/*.scss\"",
+		"lint:styles:fix": "stylelint --config ./@linter/stylelint.config.cjs \"src/**/*.css\" --fix",
+		"lint:styles:run": "stylelint --config ./@linter/stylelint.config.cjs \"src/**/*.css\"",
 		"lint:types:run": "tsc",
 		"test:ui:run": "playwright test -c ./@test/playwright/playwright-ct.config.mjs",
 		"test:ui:watch": "playwright test -c ./@test/playwright/playwright-ct.config.mjs --ui",
