--- a/core/configs/package.json
+++ b/core/configs/package.json
@@ -11,7 +11,6 @@
 		"./lint-staged/styles": "./src/lint-staged/styles.config.cjs",
 		"./playwright/component-react": "./src/playwright/component-react.config.mjs",
 		"./stylelint/css": "./src/stylelint/css.config.cjs",
-		"./stylelint/scss": "./src/stylelint/scss.config.cjs",
 		"./typescript/base": "./src/typescript/base.config.json",
 		"./typescript/node": "./src/typescript/react.config.json",
 		"./typescript/react": "./src/typescript/react.config.json",
@@ -23,9 +22,7 @@
 	"devDependencies": {
 		"@types/react": "18.2.43",
 		"@types/react-dom": "18.2.17",
-		"postcss-html": "1.7.0",
-		"postcss-scss": "4.0.9",
-		"stylelint-config-recommended-scss": "14.0.0"
+		"postcss-html": "1.7.0"
 	},
 	"peerDependencies": {
 		"@biomejs/biome": "1.9.4",
