fix(ds): errors after typescript update

--- a/core/design-system/package.json
+++ b/core/design-system/package.json
@@ -11,9 +11,7 @@
 	"main": "@bundler/build/index.umd.cjs",
 	"module": "@bundler/build/index.js",
 	"types": "@bundler/build/index.d.ts",
-	"files": [
-		"@bundler/build"
-	],
+	"files": ["@bundler/build"],
 	"exports": {
 		".": {
 			"import": "./@bundler/build/index.js",
