--- a/docs/package.json
+++ b/docs/package.json
@@ -15,6 +15,7 @@
 		"@vitejs/plugin-react": "4.7.0",
 		"@windows98/configs": "workspace:*",
 		"@windows98/design-system": "workspace:*",
+		"@windows98/i18n": "workspace:*",
 		"@windows98/micro-frontends": "workspace:*",
 		"lint-staged": "16.1.2",
 		"storybook": "9.0.18",
