--- a/docs/package.json
+++ b/docs/package.json
@@ -1,26 +1,26 @@
 {
 	"author": "Arkadiusz Paściak",
 	"description": "This workspace uses Storybook, an open-source tool for developing UI components in isolation. It helps to build, document, and test React components interactively.",
+	"dependencies": {
+		"react": "19.1.0",
+		"react-dom": "19.1.0"
+	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
-		"@chromatic-com/storybook": "3.2.2",
-		"@storybook/addon-docs": "8.4.7",
-		"@storybook/addon-essentials": "8.4.7",
-		"@storybook/addon-interactions": "8.4.7",
-		"@storybook/addon-links": "8.4.7",
-		"@storybook/addon-onboarding": "8.4.7",
-		"@storybook/blocks": "8.4.7",
-		"@storybook/react": "8.4.7",
-		"@storybook/react-vite": "8.4.7",
-		"@storybook/test": "8.4.7",
+		"@storybook/addon-a11y": "9.0.18",
+		"@storybook/addon-docs": "9.0.18",
+		"@storybook/react-vite": "9.0.18",
 		"@types/react": "19.1.0",
 		"@types/react-dom": "19.1.0",
+		"@vitejs/plugin-react": "4.7.0",
 		"@windows98/configs": "workspace:*",
 		"@windows98/design-system": "workspace:*",
+		"@windows98/i18n": "workspace:*",
 		"@windows98/micro-frontends": "workspace:*",
 		"lint-staged": "16.1.2",
 		"storybook": "9.0.18",
-		"typescript": "5.8.3"
+		"typescript": "5.8.3",
+		"vite": "6.3.5"
 	},
 	"main": ".storybook/main.ts",
 	"name": "@windows98/docs",
