--- a/core/design-system/package.json
+++ b/core/design-system/package.json
@@ -22,9 +22,7 @@
 	"license": "MIT",
 	"scripts": {
 		"dev": "vite @bundler",
-		"build": "pnpm run build:components && pnpm run build:styles",
-		"build:components": "vite build @bundler",
-		"build:styles": "node @bundler/lightningcss.command.mjs",
+		"build": "vite build @bundler",
 		"lint:code:fix": "biome check --config-path ./@linter/biome.config.json --fix",
 		"lint:code:run": "biome check --config-path ./@linter/biome.config.json",
 		"lint:staged:fix": "lint-staged --config ./@linter/lint-staged.config.cjs",
@@ -50,7 +48,7 @@
 		"@vitejs/plugin-react": "4.7.0",
 		"@windows98/configs": "workspace:*",
 		"@windows98/toolkit": "workspace:*",
-		"lightningcss-cli": "1.30.1",
+		"lightningcss": "1.30.1",
 		"lint-staged": "16.1.2",
 		"stylelint": "16.22.0",
 		"typescript": "5.8.3",
