--- a/app/package.json
+++ b/app/package.json
@@ -33,6 +33,8 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
+		"@types/react": "19.1.1",
+		"@types/react-dom": "19.1.1",
 		"@vitejs/plugin-react": "5.0.2",
 		"@windows98/toolkit": "workspace:*",
 		"lint-staged": "16.1.6",
