chore(ds): fix problem with types node packages

--- a/core/design-system/package.json
+++ b/core/design-system/package.json
@@ -44,6 +44,7 @@
 		"@playwright/experimental-ct-react": "1.55.0",
 		"@types/react": "19.1.1",
 		"@types/react-dom": "19.1.1",
+		"@types/node": "22.13.14",
 		"@vitejs/plugin-react": "5.0.2",
 		"@windows98/configs": "workspace:*",
 		"@windows98/toolkit": "workspace:*",
