fix(web-apis): workspace name from web-api to web-apis

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,7 +5,7 @@ packages:
   - core/design-system
   - core/internationalization/*
   - core/toolkit
-  - core/web-api
+  - core/web-apis
   - docs
   - micro-frontends
   - micro-services
