--- a/core/web-apis/package.json
+++ b/core/web-apis/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@windows98/web-api",
+	"name": "@windows98/web-apis",
 	"main": "@bundler/dist/index.umd.cjs",
 	"module": "@bundler/dist/index.js",
 	"types": "@bundler/dist/index.d.ts",
